# cann-recipes-infer

./: .pre-commit-config.yaml  CONTRIBUTION.md  DISCLAIMER.md  LICENSE  README.md  Third_Party_Open_Source_Software_Notice
.gitcode/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
contrib/: README.md
contrib/deepseek_v3_ascend310p/: .clang-format  LICENSE  README.md
contrib/deepseek_v3_ascend310p/src/cpp/: CMakeLists.txt  build.sh
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/: CMakeLists.txt  main_inference.cpp
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/common/: CMakeLists.txt  acl_utils.cpp  acl_utils.h  progress_bar.hpp
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/config/: CMakeLists.txt  config.cpp  config.h
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/core/: CMakeLists.txt  model_utils.cpp  model_utils.h  text_generator.cpp  text_generator.h
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/core/layers/: CMakeLists.txt  batch_matmul_op.cpp  batch_matmul_op.h  cast_op.cpp  cast_op.h  deepseek_v3_mqa_op.cpp  deepseek_v3_mqa_op.h  div_op.cpp  div_op.h  embedding.cpp  embedding.h  expert_token_dispatcher_op.cpp  expert_token_dispatcher_op.h  fused_quant_linear_dequant.cpp  fused_quant_linear_dequant.h  fused_rmsnorm_op.cpp  fused_rmsnorm_op.h  fused_rotary_op.cpp  fused_rotary_op.h  gated_silu_op.cpp  gated_silu_op.h  group_linear_dequant_op.cpp  group_linear_dequant_op.h  insert_kv_op.cpp  insert_kv_op.h  linear_op.cpp  linear_op.h  moe_routing_op.cpp  moe_routing_op.h  multinomial.cpp  multinomial.h  per_token_per_channel_dequant_op.cpp  per_token_per_channel_dequant_op.h  per_token_quant_op.cpp  per_token_quant_op.h  quant_op.cpp  quant_op.h  sample_op.cpp  sample_op.h  scaled_op.cpp  (+7 more)
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/core/models/: base_llm.h  deepseek_v3_utils.h  deepseek_v3_w8a8_model.cpp  deepseek_v3_w8a8_model.h
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/data_processor/: CMakeLists.txt  input_meta.cpp  input_meta.h
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/data_processor/protocol/: service.proto
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/runtime/: CMakeLists.txt  dtype.h  file_utils.cpp  file_utils.h  tensor.h
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/runtime/comm/: CMakeLists.txt  comm_domain_manager.cpp  comm_domain_manager.h
contrib/deepseek_v3_ascend310p/src/cpp/mlguider_llm_ascend/runtime/logger/: CMakeLists.txt  logger.cpp  logger.h  string_utils.cpp  string_utils.h
contrib/vllm-pd-hybrid-dp-ep/: README.md  omni_v0.5.0.patch
dataset/: default_prompt.json
docs/common/: model_runner_guide.md  online_split_weight_guide.md
executor/: model_runner.py
executor/scripts/: set_env.sh  (+2 more)
module/: fuse_moe_gmm.py  linear.py  utils.py
ops/pypto/: .gitattributes  CMakeLists.txt  README.md  build.sh
ops/pypto/cmake/: find_dependence_packages.cmake  intf_pub.cmake
ops/pypto/cmake/modules/: Findslog.cmake
ops/pypto/cmake/utils/: gen_binary_info_config.py  insert_simplified_keys.py
ops/pypto/docs/: deepseek_indexer_attention.md  lightning_indexer.md  lightning_indexer_prolog.md
ops/pypto/examples/: run.sh  test_deepseek_indexer_attention.py  test_lightning_indexer_prolog.py  test_lightning_indexer_pto.py
ops/pypto/examples/goldens/: gen_deepseek_indexer_attention.py  gen_lightning_indexer_prolog.py  gen_lightning_indexer_topk.py  gen_mla_prolog_golden.py  gen_selected_attention.py
ops/pypto/python/: tile_fwk_compiler.py
ops/pypto/scripts/: install.sh  kernels_compile.sh
ops/pypto/src/deepseek_indexer_attention/: CMakeLists.txt
ops/pypto/src/deepseek_indexer_attention/op_host/: CMakeLists.txt  deepseek_indexer_attention_def.cpp  deepseek_indexer_attention_proto.cpp  deepseek_indexer_attention_tiling.cpp
ops/pypto/src/deepseek_indexer_attention/op_host/op_store/: deepseek_indexer_attention_store.json
ops/pypto/src/deepseek_indexer_attention/op_kernel/: CMakeLists.txt  deepseek_indexer_attention.cpp  deepseek_indexer_attention.h  deepseek_indexer_attention_impl.cpp  dynamic_mla.cpp  dynamic_mla.h  dynamic_nsa_common.h  gather_after_prolog.cpp  gather_after_prolog.h  lightning_indexer_prolog.cpp  lightning_indexer_prolog.h  lightning_indexer_topk.cpp  lightning_indexer_topk.h  parallel_sort.h  selected_attention.cpp  selected_attention.h
ops/pypto/src/deepseek_indexer_attention/op_kernel/bin_param/: nsa_bin_param.json
ops/pypto/src/lightning_indexer_prolog_pto/: CMakeLists.txt
ops/pypto/src/lightning_indexer_prolog_pto/op_host/: CMakeLists.txt  lightning_indexer_prolog_def.cpp  lightning_indexer_prolog_proto.cpp  lightning_indexer_prolog_tiling.cpp
ops/pypto/src/lightning_indexer_prolog_pto/op_host/op_store/: lightning_indexer_prolog_store.json
ops/pypto/src/lightning_indexer_prolog_pto/op_kernel/: CMakeLists.txt  quant_lightning_indexer_prolog.cpp  quant_lightning_indexer_prolog.h  quant_lightning_indexer_prolog_impl.cpp
ops/pypto/src/lightning_indexer_prolog_pto/op_kernel/bin_param/: nsa_bin_param.json
ops/pypto/src/lightning_indexer_pto/: CMakeLists.txt
ops/pypto/src/lightning_indexer_pto/op_host/: CMakeLists.txt  lightning_indexer_def.cpp  lightning_indexer_proto.cpp  lightning_indexer_tiling.cpp
ops/pypto/src/lightning_indexer_pto/op_host/op_store/: lightning_indexer_store.json
ops/pypto/src/lightning_indexer_pto/op_kernel/: lightning_indexer_impl.cpp  lightning_indexer_topk.cpp  lightning_indexer_topk.h  parallel_sort.h
ops/pypto/src/lightning_indexer_pto/op_kernel/bin_param/: nsa_bin_param.json
ops/pypto/torch_ops_extension/: README.md  build_and_install.sh  setup.py
ops/pypto/torch_ops_extension/custom_pypto/: __init__.py
ops/pypto/torch_ops_extension/custom_pypto/converter/: npu_lightning_indexer_prolog_pto.py  npu_lightning_indexer_pto.py  npu_sparse_attention_pto.py
ops/pypto/torch_ops_extension/custom_pypto/csrc/: npu_lightning_indexer_prolog_pto.cpp  npu_lightning_indexer_pto.cpp  npu_sparse_attention_pto.cpp  ops_def_registration.cpp
(+320 files in other folders)
